--- a/devel/cabal-install/Makefile
+++ b/devel/cabal-install/Makefile
@@ -1,9 +1,9 @@
 COMMENT =	command-line interface for Cabal and Hackage
 
-DISTNAME =	cabal-install-3.6.2.0
+DISTNAME =	cabal-install-3.6.3.0
 CATEGORIES =	devel
 GH_ACCOUNT =	haskell
-GH_TAGNAME =	Cabal-v3.6.2.0
+GH_TAGNAME =	Cabal-v3.6.3.0
 GH_PROJECT =	cabal
 
 HOMEPAGE =	https://github.com/haskell/cabal
@@ -31,23 +31,24 @@ MASTER_SITES0 =		https://hackage.haskell.org/package/
 
 # Produced by manually copying values out of files/openbsd.json.
 _MANIFEST = \
+	Cabal-syntax	3.6.0.0	0 \
 	HTTP	4000.3.16	1	\
 	async	2.2.4	1	\
 	base16-bytestring	1.0.2.0	0	\
 	base64-bytestring	1.2.1.0	0	\
 	cryptohash-sha256	0.11.102.1 0	\
 	echo	0.1.4	0	\
-	ed25519	0.0.5.0	3	\
+	ed25519	0.0.5.0	5	\
 	edit-distance	0.2.2.1	1	\
-	hackage-security	0.6.0.1	8	\
-	hashable	1.3.5.0	0	\
-	lukko	0.1.1.3	1	\
-	network	3.1.2.5	0	\
+	hackage-security	0.6.2.1	1	\
+	hashable	1.4.0.2	0	\
+	lukko	0.1.1.3	2	\
+	network	3.1.2.7	0	\
 	network-uri	2.6.4.1	0	\
 	random	1.2.1	0	\
 	regex-base	0.94.0.2	0	\
 	regex-posix	0.96.0.1	0	\
-	resolv	0.1.2.0	3	\
+	resolv	0.1.2.0	4	\
 	splitmix	0.1.0.4	0	\
 	th-compat	0.1.3 0	\
 	tar	0.5.1.1	4	\
