--- a/x11/xmobar/Makefile
+++ b/x11/xmobar/Makefile
@@ -2,7 +2,7 @@ COMMENT =		minimalistic text based status bar
 REVISION =		0
 
 MODCABAL_STEM =		xmobar
-MODCABAL_VERSION =	0.41
+MODCABAL_VERSION =	0.42
 CATEGORIES =		x11
 HOMEPAGE =		https://xmobar.org
 
@@ -15,9 +15,11 @@ WANTLIB =		X11 Xext Xft Xinerama Xrandr Xrender \
 
 MODULES =		devel/cabal
 MODCABAL_FLAGS =	with_xft with_mpd with_mpris with_inotify
+# Until https://github.com/jaor/xmobar/issues/617 gets resolved
+MODCABAL_BUILD_ARGS =	--allow-newer
 
-# % cabal get xmobar-0.41
-# % cd ./xmobar-0.41
+# % cabal get xmobar-0.42
+# % cd ./xmobar-0.42
 # % cabal v2-configure --flags="with_xft with_mpd with_mpris with_inotify"
 # % cabal-bundler --openbsd xmobar -p ./dist-newstyle/cache/plan.json
 MODCABAL_MANIFEST	= \
@@ -34,16 +36,16 @@ MODCABAL_MANIFEST	= \
 	asn1-types	0.3.4	0	\
 	assoc	1.0.2	2	\
 	async	2.2.4	1	\
-	attoparsec	0.14.4	0	\
+	attoparsec	0.14.4	1	\
 	base-compat	0.12.1	0	\
 	base-compat-batteries	0.12.1	2	\
 	base-orphans	0.8.6	0	\
 	base64-bytestring	1.2.1.0	0	\
-	basement	0.0.12	1	\
+	basement	0.0.14	0	\
 	bifunctors	5.5.11	1	\
 	blaze-builder	0.4.2.2	1	\
-	blaze-html	0.9.1.2	1	\
-	blaze-markup	0.8.2.8	1	\
+	blaze-html	0.9.1.2	2	\
+	blaze-markup	0.8.2.8	2	\
 	byteorder	1.0.4	0	\
 	cabal-doctest	1.0.9	0	\
 	call-stack	0.4.0	0	\
@@ -55,10 +57,10 @@ MODCABAL_MANIFEST	= \
 	connection	0.3.1	1	\
 	contravariant	1.5.5	0	\
 	cookie	0.4.5	0	\
-	cryptonite	0.29	0	\
+	cryptonite	0.30	0	\
 	data-default-class	0.1.2.0	0	\
 	data-fix	0.3.2	2	\
-	dbus	1.2.22	0	\
+	dbus	1.2.24	0	\
 	distributive	0.6.2.1	1	\
 	dlist	1.0	0	\
 	extensible-exceptions	0.1.1.4	0	\
@@ -67,8 +69,8 @@ MODCABAL_MANIFEST	= \
 	hinotify	0.4.1	0	\
 	hourglass	0.2.12	0	\
 	hsc2hs	0.68.8	0	\
-	http-client	0.7.9	0	\
-	http-client-tls	0.3.5.3	1	\
+	http-client	0.7.11	1	\
+	http-client-tls	0.3.6.1	0	\
 	http-conduit	2.3.8	0	\
 	http-types	0.12.3	0	\
 	indexed-traversable	0.1.2	1	\
@@ -79,10 +81,10 @@ MODCABAL_MANIFEST	= \
 	kan-extensions	5.2.3	0	\
 	lens	5.1	1	\
 	libmpd	0.10.0.0	0	\
-	memory	0.16.0	1	\
+	memory	0.17.0	0	\
 	mime-types	0.1.0.9	0	\
 	mono-traversable	1.0.15.3	0	\
-	network	3.1.2.5	0	\
+	network	3.1.2.7	0	\
 	network-uri	2.6.4.1	0	\
 	old-locale	1.0.0.7	2	\
 	parallel	3.2.2.0	4	\
@@ -95,7 +97,7 @@ MODCABAL_MANIFEST	= \
 	regex-base	0.94.0.2	0	\
 	regex-compat	0.95.2.1	1	\
 	regex-posix	0.96.0.1	0	\
-	resourcet	1.2.4.3	0	\
+	resourcet	1.2.4.3	1	\
 	safe-exceptions	0.1.7.2	0	\
 	scientific	0.3.7.0	2	\
 	semialign	1.2.0.1	1	\
@@ -104,7 +106,7 @@ MODCABAL_MANIFEST	= \
 	socks	0.6.1	0	\
 	split	0.2.3.4	2	\
 	splitmix	0.1.0.4	0	\
-	streaming-commons	0.2.2.3	0	\
+	streaming-commons	0.2.2.4	0	\
 	strict	0.4.0.1	4	\
 	tagged	0.8.6.1	2	\
 	text-short	0.1.5	0	\
@@ -113,22 +115,22 @@ MODCABAL_MANIFEST	= \
 	th-lift	0.8.2	1	\
 	these	1.1.1.1	5	\
 	time-compat	1.9.6.1	3	\
-	tls	1.5.6	0	\
+	tls	1.5.7	0	\
 	transformers-base	0.4.6	0	\
 	transformers-compat	0.7.1	1	\
 	typed-process	0.2.8.0	0	\
 	unliftio-core	0.2.0.1	2	\
-	unordered-containers	0.2.16.0	0	\
+	unordered-containers	0.2.17.0	0	\
 	utf8-string	1.0.2	0	\
 	uuid-types	1.0.5	2	\
 	vector	0.12.3.1	1	\
 	vector-algorithms	0.8.0.4	1	\
 	void	0.7.3	0	\
 	witherable	0.4.2	2	\
-	x509	1.7.5	1	\
-	x509-store	1.6.7	1	\
-	x509-system	1.6.6	0	\
-	x509-validation	1.6.11	0	\
+	x509	1.7.6	0	\
+	x509-store	1.6.9	0	\
+	x509-system	1.6.7	0	\
+	x509-validation	1.6.12	0	\
 	xml-conduit	1.9.1.1	0	\
 	xml-types	0.3.8	0	\
 	zlib	0.6.2.3	1	\
